src/objects/Sleep__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sleep Data</relationshipLabel>
        <relationshipName>Sleep_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Asleep_Time__c</fullName>
        <label>Asleep Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Awake_For__c</fullName>
        <label>Awake For</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awake_Time__c</fullName>
        <label>Awake Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Awakenings__c</fullName>
        <label>Awakenings</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Light_Sleep__c</fullName>
        <label>Light Sleep</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Smart_Alarm_Fired__c</fullName>
        <label>Smart Alarm Fired</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sound_Sleep__c</fullName>
        <label>Sound Sleep</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunrise__c</fullName>
        <label>Sunrise</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sunset__c</fullName>
        <label>Sunset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Completed__c</fullName>
        <label>Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Created__c</fullName>
        <label>Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Updated__c</fullName>
        <label>Time Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sleep Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Record XID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sleep Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>